WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187944
REGRESSION(
r234055
): inverted return values in MediaPlayer::wouldTaintOrigin()
https://bugs.webkit.org/show_bug.cgi?id=187944
Summary
REGRESSION(r234055): inverted return values in MediaPlayer::wouldTaintOrigin()
Zan Dobersek
Reported
2018-07-24 00:04:50 PDT
REGRESSION(
r234055
): inverted return values in MediaPlayer::wouldTaintOrigin()
Attachments
Patch
(2.02 KB, patch)
2018-07-24 00:16 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2018-07-24 00:15:07 PDT
Discrepancy introduced in
r234055
,
bug #187731
.
https://trac.webkit.org/changeset/234055/webkit
Zan Dobersek
Comment 2
2018-07-24 00:16:34 PDT
Created
attachment 345641
[details]
Patch
Carlos Garcia Campos
Comment 3
2018-07-24 00:19:47 PDT
Comment on
attachment 345641
[details]
Patch Wait for EWS before landing, please.
Zan Dobersek
Comment 4
2018-07-24 01:55:34 PDT
Comment on
attachment 345641
[details]
Patch Clearing flags on attachment: 345641 Committed
r234140
: <
https://trac.webkit.org/changeset/234140
>
Zan Dobersek
Comment 5
2018-07-24 01:55:38 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-07-24 01:56:19 PDT
<
rdar://problem/42533591
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug